modified RDF classes to use URIs