@@ -1,8 +1,8 @@
 package com.garretwilson.text.xml;
 
-import java.net.MalformedURLException;
-import java.net.URL;
-import com.garretwilson.net.URLUtilities;
+import java.net.URI;
+import java.net.URISyntaxException;
+//G***del when works import com.garretwilson.net.URLUtilities;
 import com.garretwilson.util.Debug;
 import org.w3c.dom.*;
 
@@ -31,9 +31,9 @@ public class XMLBase implements XMLBaseConstants
 	@param element The element for which a base URI should be determined.
 	@return The resolved base URI for the element according to XML Base, or
 		<code>null</code> if a base URI is not specified.
-	@exception MalformedURLException Thrown if the constructed URI is invalid.
+	@exception URISyntaxException Thrown if the constructed URI is invalid.
 	*/
-	public static String getBaseURI(final Element element) throws MalformedURLException
+	public static URI getBaseURI(final Element element) throws URISyntaxException
 	{
 		return getBaseURI(element, null); //get the base URI without specifying a base URI for the document
 	}
@@ -47,15 +47,15 @@ public class XMLBase implements XMLBaseConstants
 		<code>null</code> if the base URI of the document is not known.
 	@return The resolved base URI for the element according to XML Base, or
 		the document base URI if a base URI is not specified.
-	@exception MalformedURLException Thrown if the constructed URI is invalid.
+	@exception URISyntaxException Thrown if the constructed URI is invalid.
 	*/
-	public static String getBaseURI(final Element element, final String documentBaseURI) throws MalformedURLException
+	public static URI getBaseURI(final Element element, final URI documentBaseURI) throws URISyntaxException
 	{
 Debug.trace("Getting base URI for element: ", element.getNodeName()); //G***del
 		final String xmlBaseValue=getXMLBaseAttributeValue(element);  //get the element's xml:base attribute value
 Debug.trace("xml:base: ", xmlBaseValue); //G***del
 
-		final String parentBaseURI; //determine the base URI of the parent, so that we can resolve relative URIs, if we need to
+		final URI parentBaseURI; //determine the base URI of the parent, so that we can resolve relative URIs, if we need to
 		final Node parentNode=element.getParentNode();  //get the element's parent node
 		if(parentNode!=null && parentNode.getNodeType()==Node.ELEMENT_NODE) //if there is a parent element
 		{
@@ -66,7 +66,8 @@ Debug.trace("xml:base: ", xmlBaseValue); //G***del
 		if(xmlBaseValue!=null)  //if the element has an xml:base attribute value
 		{
 Debug.trace("found xml base value, creating URL with parent: ", parentBaseURI); //G***del
-			return URLUtilities.createURL(parentBaseURI!=null ? new URL(parentBaseURI) : null, xmlBaseValue).toString(); //create a URI relative to the base URI G***fix to use URIs instead of URLs
+			return parentBaseURI!=null ? parentBaseURI.resolve(xmlBaseValue) : new URI(xmlBaseValue);	//create a URI relative to the parent's base URI	
+//G**del when new URI stuff works			return URLUtilities.createURL(parentBaseURI!=null ? new URL(parentBaseURI) : null, xmlBaseValue).toString(); //create a URI relative to the base URI G***fix to use URIs instead of URLs
 		}
 		else  //if there is no xml:base attribute value
 		{
@@ -88,9 +89,9 @@ Debug.trace("found xml base value, creating URL with parent: ", parentBaseURI); 
 	@param uri The URI to resolve.
 	@param element The element for which a base URI should be determined.
 	@return A URI resolved to the base URI of the document for the given element.
-	@exception MalformedURLException Thrown if the constructed URI is invalid.
+	@exception URISyntaxException Thrown if the constructed URI is invalid.
 	*/
-	public static String resolveURI(final String uri, final Element element) throws MalformedURLException
+	public URI resolveURI(final URI uri, final Element element) throws URISyntaxException
 	{
 	  return resolveURI(uri, element, null);  //resolve the URI without specifying a document base URI
 	}
@@ -102,13 +103,43 @@ Debug.trace("found xml base value, creating URL with parent: ", parentBaseURI); 
 	@param documentBaseURI The base URI of the document itself, or
 		<code>null</code> if the base URI of the document is not known.
 	@return A URI resolved to the base URI of the document for the given element.
-	@exception MalformedURLException Thrown if the constructed URI is invalid.
+	@exception URISyntaxException Thrown if the constructed URI is invalid.
 	*/
-	public static String resolveURI(final String uri, final Element element, final String documentBaseURI) throws MalformedURLException
+	public static URI resolveURI(final URI uri, final Element element, final URI documentBaseURI) throws URISyntaxException
 	{
-		final String baseURI=getBaseURI(element, documentBaseURI);  //get the base URI of the element
+		final URI baseURI=getBaseURI(element, documentBaseURI);  //get the base URI of the element
 		  //resolve the given URI to the base URI we determine
-		return URLUtilities.createURL(baseURI!=null ? new URL(baseURI) : null, uri).toString();
+		return baseURI!=null ? baseURI.resolve(uri) : uri;
+//G***del when new URI stuff works		return URLUtilities.createURL(baseURI!=null ? new URL(baseURI) : null, uri).toString();
+	}
+
+	/**Creates a URI by resolving the given string relative to the base URI of the
+		provided element.
+	@param string The string to resolve.
+	@param element The element for which a base URI should be determined.
+	@return A URI resolved to the base URI of the document for the given element.
+	@exception URISyntaxException Thrown if the constructed URI is invalid.
+	*/
+	public URI resolveURI(final String string, final Element element) throws URISyntaxException
+	{
+		return resolveURI(string, element, null);  //resolve the URI without specifying a document base URI
+	}
+
+	/**Creates a URI by resolving the given string relative to the base URI of the
+		provided element, taking into account the given base URI of the document.
+	@param string The string to resolve.
+	@param element The element for which a base URI should be determined.
+	@param documentBaseURI The base URI of the document itself, or
+		<code>null</code> if the base URI of the document is not known.
+	@return A URI resolved to the base URI of the document for the given element.
+	@exception URISyntaxException Thrown if the constructed URI is invalid.
+	*/
+	public static URI resolveURI(final String string, final Element element, final URI documentBaseURI) throws URISyntaxException
+	{
+		final URI baseURI=getBaseURI(element, documentBaseURI);  //get the base URI of the element
+			//resolve the given URI to the base URI we determine
+		return baseURI!=null ? baseURI.resolve(string) : new URI(string);
+//G***del when new URI stuff works		return URLUtilities.createURL(baseURI!=null ? new URL(baseURI) : null, uri).toString();
 	}
 
 }
